# kelan-web

./: Cargo.toml  README.md  aitp.db-shm  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
src/: App.vue  main.ts  style.css
src/api/: auth.rs  config.rs  events.rs  federation.rs  mod.rs  nodes.rs  sentinel.rs  sessions.rs  stats.rs
src/bridge/: mod.rs
src/components/: NetworkCanvas.vue
src/components/dashboard/: AttackMonitor.vue  ConfigView.vue  LiveNetworkGraph.vue  LiveSessions.vue  SentinelFeed.vue  StatCard.vue  TestLab.vue
src/components/home/: AboutSection.vue  ContactSection.vue  DocsSection.vue  FeaturesGrid.vue  HeroSection.vue  HowItWorks.vue  ParticleOrb.vue  PricingSection.vue  SentinelSection.vue  StatsSection.vue  ThreatDemo.vue
src/components/layout/: BottomNav.vue  Footer.vue  NavBar.vue
src/components/ui/: BracketNum.vue  GlassCard.vue  GlowButton.vue  ParticleCanvas.vue  SectionBadge.vue
src/composables/: useAitpSocket.js  useScrollReveal.ts
src/db/: migrations.rs  mod.rs  models.rs  queries.rs
src/federation/: mod.rs
src/router/: index.js  index.ts
src/sentinel/: mod.rs
src/stores/: aitp.js
src/styles/: animations.css  global.css
src/views/: AboutView.vue  DashboardView.vue  HomeView.vue  LoginView.vue  ProductView.vue  TerminalView.vue
src/ws/: handler.rs  mod.rs
