[package]
name = "aitp-web"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "aitp_web"
path = "src/main.rs"

[dependencies]
axum              = { version = "0.7", features = ["ws", "macros"] }
axum-extra        = { version = "0.9", features = ["typed-header"] }
tower-http        = { version = "0.5", features = ["cors", "fs"] }
tokio             = { version = "1", features = ["full"] }
sqlx              = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio-native-tls", "chrono", "uuid", "macros"] }
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
jsonwebtoken      = "9"
argon2            = "0.5"
uuid              = { version = "1", features = ["v4", "serde"] }
chrono            = { version = "0.4", features = ["serde"] }
thiserror         = "1"
anyhow            = "1"
reqwest           = { workspace = true }
dotenvy           = "0.15"
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand              = "0.8"
hex               = "0.4"
sha2              = "0.10"
base64            = "0.21"
ed25519-dalek     = { version = "2", features = ["rand_core"] }
prometheus        = { workspace = true }
lazy_static       = "1.4"
aitp-core         = { path = "../aitp-core" }
aitp-ai-engine    = { path = "../aitp-ai-engine" }
aitp-identity     = { path = "../aitp-identity" }
aitp-sdk          = { path = "../aitp-sdk" }
